--- a/qrc/qml.qrc
+++ b/qrc/qml.qrc
@@ -10,8 +10,8 @@
         <file alias="test1">_json/test1.json</file>
         <file>ControlElements/ElementDelegate.qml</file>
         <file>Popups/SavePopup.qml</file>
-        <file>Popups/NewValuePopup.qml</file>
         <file>MainElements/EnumPage.qml</file>
+        <file>MainElements/DevicePage.qml</file>
     </qresource>
     <qresource prefix="/Icons">
         <file alias="exit">Icons/exit.png</file>
