--- a/qrc/qml.qrc
+++ b/qrc/qml.qrc
@@ -12,6 +12,7 @@
         <file>Popups/SavePopup.qml</file>
         <file>MainElements/EnumPage.qml</file>
         <file>MainElements/DevicePage.qml</file>
+        <file>Popups/NewDevicePopup.qml</file>
     </qresource>
     <qresource prefix="/Icons">
         <file alias="exit">Icons/exit.png</file>
